// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns "undefined" if no unfilled balanced line exist 1`] = `undefined`;

exports[`returns "undefined" if no unfilled balanced line exist 2`] = `undefined`;

exports[`returns "undefined" if no unfilled balanced line exist 3`] = `undefined`;

exports[`returns "undefined" if no unfilled balanced line exist 4`] = `undefined`;

exports[`returns "undefined" if no unfilled balanced line exist 5`] = `undefined`;

exports[`returns "undefined" if no unfilled balanced line exist 6`] = `undefined`;

exports[`returns "undefined" if no unfilled balanced line exist 7`] = `undefined`;

exports[`returns "undefined" if no unfilled balanced line exist 8`] = `undefined`;

exports[`returns "undefined" if no unfilled balanced line exist 9`] = `undefined`;

exports[`returns "undefined" if no unfilled balanced line exist 10`] = `undefined`;

exports[`selects unfilled balanced line 1`] = `"portrait"`;

exports[`selects unfilled balanced line 2`] = `
[⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {⬜} {⬜}
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects unfilled balanced line 3`] = `"portrait"`;

exports[`selects unfilled balanced line 4`] = `
[⬜] [⬜] [⬜] [⬜]
{⬜} {🟥} {⬜} {🟥}
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects unfilled balanced line 5`] = `"portrait"`;

exports[`selects unfilled balanced line 6`] = `
[⬜] [⬜] [⬜] [⬜]
{🟥} {⬜} {⬜} {🟥}
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects unfilled balanced line 7`] = `"landscape"`;

exports[`selects unfilled balanced line 8`] = `
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] {⬜} [⬜] [⬜]
[⬜] {⬜} [⬜] [⬜]
`;

exports[`selects unfilled balanced line 9`] = `"landscape"`;

exports[`selects unfilled balanced line 10`] = `
[⬜] {⬜} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] {⬜} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
`;

exports[`selects unfilled balanced line 11`] = `"landscape"`;

exports[`selects unfilled balanced line 12`] = `
[⬜] {🟥} [⬜] [⬜]
[⬜] {⬜} [⬜] [⬜]
[⬜] {⬜} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
`;

exports[`selects unfilled balanced line 13`] = `"portrait"`;

exports[`selects unfilled balanced line 14`] = `
[⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟦} {⬜}
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects unfilled balanced line 15`] = `"portrait"`;

exports[`selects unfilled balanced line 16`] = `
[⬜] [⬜] [⬜] [⬜]
{⬜} {🟥} {🟦} {🟥}
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects unfilled balanced line 17`] = `"landscape"`;

exports[`selects unfilled balanced line 18`] = `
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟦} [⬜] [⬜]
[⬜] {⬜} [⬜] [⬜]
`;

exports[`selects unfilled balanced line 19`] = `"landscape"`;

exports[`selects unfilled balanced line 20`] = `
[⬜] {⬜} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
[⬜] {🟦} [⬜] [⬜]
[⬜] {🟥} [⬜] [⬜]
`;
